# hive-map-cpp

./: .gitignore  CMakeLists.txt  README.md
include/hmap/: interface.h  simulation.h
include/hmap/modules/interface/: communication.h
include/hmap/modules/interface_modules/: communication.h
include/hmap/modules/simulation/: communication.h
include/hmap/modules/simulation/communication/: local_communicator.h  mpi_radio_transceiver.h
src/: local_communicator.cpp
tests/: main.cpp  mpi_main.cpp
